# just-enough-stack

./: .gitignore  MIGRATION_COMPLETE.md  README.md  pyproject.toml  start-dev.bat  start-dev.py  start-dev.sh
app/: Dockerfile  MIGRATION.md  main.py  migrate.py  pyproject.toml  requirements.txt
app/alembic/: env.py
app/alembic/versions/: 827605f1ad30_添加用户角色和激活状态字段.py  a103d1f8a504_initial_migration.py
app/scripts/: generate-types.sh
app/src/: exc.py
app/src/api/: utils.py
app/src/api/v1/: __init__.py  task.py  user.py  user_management.py
app/src/dao/: __init__.py  base.py  task_dao.py  user_dao.py
app/src/db/: __init__.py
app/src/middleware/: auth.py
app/src/orm/: __init__.py
app/src/types/: files.py  models.py  standard_response.py  task_models.py  task_status.py  user_role.py  users.py
je_stack/: __init__.py
je_stack/auth/: __init__.py  jwt_auth.py  password.py  test.py
je_stack/crud/: __init__.py  base.py
je_stack/schemas/: __init__.py  response.py  user_role.py
je_stack/utils/: __init__.py  database.py  logger.py
web/: .env.example  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
web/public/: version.json
web/src/: App.vue  main.ts  shims-vue.ts
web/src/api/: client.ts
web/src/api/task/: index.ts
web/src/api/user/: index.ts
web/src/assets/styles/: main.scss  variables.scss
web/src/components/: GlobalFireworks.vue
web/src/layouts/: BasicLayout.vue
web/src/middleware/: auth.ts  requestLogger.ts
web/src/router/: index.ts  menu.ts  routes.ts
web/src/stores/: task.ts  user.ts
web/src/types/: api.ts  comment.ts  query.ts  task.ts
web/src/utils/: mittBus.ts  sys.ts  time.ts  timeUtils.ts
web/src/views/error/: 404.vue
web/src/views/home/: index.vue
web/src/views/success/: index.vue
web/src/views/task/: detail.vue  index.vue
web/src/views/task/components/: TaskForm.vue
web/src/views/user/: login.vue  profile.vue  register.vue  simple-login.vue
